--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ body {
     }
 
     .hero {
-        height: 100vh;
+        height: 100%;
         background-image: url(images/hero-desktop.jpg);
     }
 
@@ -155,7 +155,7 @@ body {
     }
 
     .content h1 {
-        font-size: 100px;
+        font-size: 3em;
         margin-bottom: 15px;
     }
 
